<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="com.payvand.jahandideh.payvand.NewPayam">




            <include
                layout="@layout/app_bar"/>




<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mozoo"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:id="@+id/mopaym"
         />
</LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/matn"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:id="@+id/mapaym"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recive"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:id="@+id/payamrecive"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_register_newpayam"
            android:text="@string/sabt"
            android:background="@drawable/button"/>

    </LinearLayout>
</LinearLayout>
