<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/p">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/atoma"
        android:id="@+id/textView"
        android:layout_above="@+id/username"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user"
        android:background="@drawable/custom_button"
        android:id="@+id/username"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:drawableLeft="@drawable/user"
        android:imeOptions="actionNext"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textColor="#000"
        android:textColorHint="#000"
        />


    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/vorood"
        android:textColor="#000"
        android:textColorHint="#000"
        android:id="@+id/button"
        android:layout_below="@+id/password"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:background="@drawable/custom_button"
        android:textAlignment="center"
        android:drawableLeft="@android:drawable/ic_lock_lock"
        android:layout_below="@+id/username"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:textColor="#000"
        android:textColorHint="#000"
        android:layout_marginRight="50dp"/>

    <ImageView
        android:layout_width="250dp"
        android:layout_height="175dp"
        android:id="@+id/imageView"
        android:layout_centerHorizontal="true"

        android:layout_above="@+id/textView"
        android:padding="0dp" />

</RelativeLayout>
