<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.payvand.jahandideh.payvand.Nameh">
    <include
        layout="@layout/app_bar"
        />
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
   >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_gravity="right">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/besm"
            android:id="@+id/textView6"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_weight="0.75" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/textView14"
            android:layout_weight="0.75"
            android:visibility="invisible" />

        <TextView
            android:layout_width="146dp"
            android:layout_height="37dp"
            android:id="@+id/txttersal"
            android:layout_weight="0.18"
            android:textColor="#000" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mnameh"
        android:textColor="#000"
        android:textSize="20sp"
        />

        <TextView
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:id="@+id/textmnameh"
        />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:id="@+id/textmanameh"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tashakkor"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_gravity="left"
            android:layout_marginLeft="12dp" />
    </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
           >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:id="@+id/textersal"
                android:layout_marginRight="5dp"
                android:layout_gravity="right"
                android:text="NewText"
                android:layout_toStartOf="@+id/textView19"
                android:layout_alignParentTop="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/textView19"
                android:textColor="#000"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>


</LinearLayout>
