<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include
        layout="@layout/app_bar"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:layout_width="286dp"
                    android:layout_height="wrap_content"
                    android:text="@string/besm"
                    android:id="@+id/textView6"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_marginLeft="80dp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txttersals"
                android:layout_weight="0.18"
                android:textColor="#000"
                android:textAlignment="textEnd"
                android:layout_marginTop="-15dp"
                android:layout_marginBottom="5dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mnameh"
                    android:textColor="#000"
                    android:textSize="20sp"
                    />

                <TextView
                    android:layout_width="182dp"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:id="@+id/textmnamehs"
                    android:text="text"
                    android:singleLine="false"
                    android:textAlignment="textEnd"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp" />



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:id="@+id/textmanamehs"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tashakkor"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:layout_gravity="left"
                    android:layout_marginLeft="12dp" />
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:id="@+id/textersals"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="right"
                    android:text="NewText"
                    android:layout_toStartOf="@+id/textView19s"
                    android:layout_alignParentTop="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/textView19s"
                    android:textColor="#000"
                    android:layout_alignParentEnd="true" />


            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/textView14"

                    android:layout_centerHorizontal="true"
                    android:textAlignment="center" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>




</LinearLayout>
